--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -9,6 +9,8 @@
     },
     "vscode": {
       "extensions": [
+        "ms-toolsai.jupyter",
+        "ms-toolsai.jupyter-renderers",
         "ms-python.python"
       ]
     }
